--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Title-->
-    <title>Website Title</title>
+    <title>Elviro Quuen</title>
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <!--Fav-icon-->
@@ -19,9 +19,9 @@
         <!--Navigation-->
         <nav class="navigation">
             <!--logo--------->
-            <a href="/" class="logo">Bot Name</a>
+            <a href="/" class="logo">Elviro</a>
             <!--invite-btn--->
-            <a href="your bot invite link here" class="invite-btn">Invite</a>
+            <a href="https://discord.gg/tsf8sDPrRN" class="invite-btn">Support Server</a>
         </nav>
         <!--navigation-end---------------------------->
         <!--==container===============================-->
@@ -32,10 +32,10 @@
             </div>
             <!--text------------>
             <div class="container-text">
-                <strong>Build the best Discord Server!</strong>
-                <p>Get everything on only one bot no need to use multiple bot to manage your server</p>
+                <strong>Build the best Discord Server with ChatBot!</strong>
+                <p>Get Best Female ChatBot For Your Server! No paid required!</p>
                 <!--invite-box------->
-                <a href="your bot invite link here" class="invite-btnx">Invite</a></div>
+                <a href="https://discord.com/oauth2/authorize?client_id=1234381969828347966&permissions=30779548630263&scope=bot" class="invite-btnx">Invite</a></div>
         </section>
         <!--container-end--------------------------------------->
         <!--==Services================================-->
@@ -48,8 +48,8 @@
                 </div>
                 <!--text----->
                 <div class="service-text">
-                    <strong>Fastest Music</strong>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, accusamus qui! Molestias corporis quaerat optio minus</p>
+                    <strong>Fastest Replay</strong>
+                    <p>Took one to three second to replay 💬! </p>
                 </div>
             </div>
             <!--box-2------------->
@@ -60,8 +60,8 @@
                 </div>
                 <!--text----->
                 <div class="service-text">
-                    <strong>Record your vc</strong>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, accusamus qui! Molestias corporis quaerat optio minus</p>
+                    <strong>Never Stop</strong>
+                    <p>My bot is 24/7 and faster. Make your server faster by this bot 🔥🔥.</p>
                 </div>
             </div>
             <!--box-3------------->
@@ -72,8 +72,8 @@
                 </div>
                 <!--text----->
                 <div class="service-text">
-                    <strong>Auto Moderator</strong>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, accusamus qui! Molestias corporis quaerat optio minus</p>
+                    <strong>No Bad words</strong>
+                    <p>Our bot is clean and friendly 🍟</p>
                 </div>
             </div>
             <!--box-4------------->
@@ -84,8 +84,8 @@
                 </div>
                 <!--text----->
                 <div class="service-text">
-                    <strong>10+ Mini Games</strong>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, accusamus qui! Molestias corporis quaerat optio minus</p>
+                    <strong>MuitlChatting</strong>
+                    <p>can Chat From 50 channel at same time! 💬 </p>
                 </div>
             </div>
         </section>
@@ -93,10 +93,10 @@
         <!--==contact====================================-->
         <section id="contact">
             <!--connect-btn--->
-            <a href="your server link"><i class="fa-brands fa-discord"></i>  Support Server</a>
+            <a href="https://discord.gg/tsf8sDPrRN"><i class="fa-brands fa-discord"></i>  Support Server</a>
         </section>
         <!--copyright======================================-->
-        <span class="copyright">Copyright <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script> - OddCoder</span>
+        <span class="copyright">Copyright <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script> - Kabboi</span>
     </body>
     </html>
       
